--- a/templates/raw_map.html
+++ b/templates/raw_map.html
@@ -50,7 +50,7 @@
 
 <body>
 
-   <div class="folium-map" id="folium_af45d0d300514dae9e3998d4e0ec79d3" style="width: 960px; height: 500px"></div>
+   <div class="folium-map" id="folium_6ed53361c07b4d59bc27fbde8e5f1c36" style="width: 960px; height: 500px"></div>
 
    <script>
 
@@ -94,8 +94,8 @@
       /*
       Creates the map and adds the selected layers
       */
-      var map = L.map('folium_af45d0d300514dae9e3998d4e0ec79d3', {
-                                       center:[43.98, -74.72],
+      var map = L.map('folium_6ed53361c07b4d59bc27fbde8e5f1c36', {
+                                       center:[45.5088, -73.5878],
                                        zoom: 13,
                                        maxBounds: bounds,
                                        layers: [base_tile]
@@ -113,131 +113,86 @@
       
 
       
-      var circle_1 = L.circle([43.652599, -79.432413], 500, {
+      var circle_1 = L.circle([45.525982, -73.557485], 500, {
                             color: '#000000',
                             fillColor: '#FF0000',
                             fillOpacity: 0.2
                             });
-      circle_1.bindPopup("\n                <img src='https://images.craigslist.org/00k0k_in1gMX38EQQ_300x300.jpg' height='auto' width='160px' />\n                <h3>free digital multimeter</h3>\n                <h4>Brockton Village, toronto</h4>\n                <a href='http://toronto.craigslist.ca/tor/zip/5046857061.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_1.bindPopup("\n                <img src='https://images.craigslist.org/00101_cVq7HiixrY3_300x300.jpg' height='auto' width='160px' />\n                <h3>Pallettes (3) et terre &#65533; jardin / soil (120L)</h3>\n                <h4>Papineau &amp; Ontario, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5047008776.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_1._popup.options.maxWidth = 300;
       map.addLayer(circle_1)
       
-      var circle_2 = L.circle([43.648581, -79.430920], 490, {
+      var circle_2 = L.circle([45.474487, -73.638281], 490, {
                             color: '#000000',
                             fillColor: '#FF0000',
                             fillOpacity: 0.2
                             });
-      circle_2.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>Free regulation size ping pong table</h3>\n                <h4>Dundas &amp; Dufferin, toronto</h4>\n                <a href='http://toronto.craigslist.ca/tor/zip/5046839524.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_2.bindPopup("\n                <img src='https://images.craigslist.org/00202_1ZkKLSvsaI,_300x300.jpg' height='auto' width='160px' />\n                <h3>Wheelchair Bag</h3>\n                <h4>NDG, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5026825484.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_2._popup.options.maxWidth = 300;
       map.addLayer(circle_2)
       
-      var circle_3 = L.circle([43.643127, -79.405151], 480, {
+      var circle_3 = L.circle([45.474487, -73.638281], 480, {
                             color: '#000000',
-                            fillColor: '#FF0000',
+                            fillColor: '#000000',
                             fillOpacity: 0.2
                             });
-      circle_3.bindPopup("\n                <img src='https://images.craigslist.org/00x0x_f7hVkCDnfU3_300x300.jpg' height='auto' width='160px' />\n                <h3>FREE COUCH - must take today</h3>\n                <h4>TORONTO, toronto</h4>\n                <a href='http://toronto.craigslist.ca/tor/zip/5046678749.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_3.bindPopup("\n                <img src='https://images.craigslist.org/00M0M_aSviS8mO8NA_300x300.jpg' height='auto' width='160px' />\n                <h3>Books in Dutch about Holland</h3>\n                <h4>ndg, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5026802082.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_3._popup.options.maxWidth = 300;
       map.addLayer(circle_3)
       
-      var circle_4 = L.circle([43.662134, -79.353067], 470, {
+      var circle_4 = L.circle([45.486694, -73.576276], 470, {
                             color: '#000000',
                             fillColor: '#FF0000',
                             fillOpacity: 0.2
                             });
-      circle_4.bindPopup("\n                <img src='https://images.craigslist.org/00U0U_ibK0Eh5Prj6_300x300.jpg' height='auto' width='160px' />\n                <h3>Free Lumber! (2x6's)</h3>\n                <h4>131 Munro St, toronto</h4>\n                <a href='http://toronto.craigslist.ca/tor/zip/5046581861.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_4.bindPopup("\n                <img src='https://images.craigslist.org/00z0z_57hJGCdCK3w_300x300.jpg' height='auto' width='160px' />\n                <h3>Free aluminium garbage bin</h3>\n                <h4>montreal, Somewhere</h4>\n                <a href='http://montreal.craigslist.ca/zip/5042304641.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_4._popup.options.maxWidth = 300;
       map.addLayer(circle_4)
       
-      var circle_5 = L.circle([43.650118, -79.407809], 460, {
+      var circle_5 = L.circle([45.5251589, -73.5911254], 460, {
                             color: '#000000',
                             fillColor: '#FF0000',
                             fillOpacity: 0.2
                             });
-      circle_5.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>FREE DOUBLE MATTRESS (& optional frame)</h3>\n                <h4>Trinity Bellwood, toronto</h4>\n                <a href='http://toronto.craigslist.ca/tor/zip/5046536127.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_5.bindPopup("\n                <img src='https://images.craigslist.org/00303_eEqubK6dASe_300x300.jpg' height='auto' width='160px' />\n                <h3>base de lit simple en bois avec sommier</h3>\n                <h4>plateau est, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5046965240.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_5._popup.options.maxWidth = 300;
       map.addLayer(circle_5)
       
-      var circle_6 = L.circle([43.775753, -79.491149], 450, {
+      var circle_6 = L.circle([45.493545, -73.809166], 450, {
                             color: '#000000',
                             fillColor: '#FF0000',
                             fillOpacity: 0.2
                             });
-      circle_6.bindPopup("\n                <img src='https://images.craigslist.org/00F0F_3lqQPTlWtGn_300x300.jpg' height='auto' width='160px' />\n                <h3>Free Wooden Skids! Pick Up Only!</h3>\n                <h4>toronto, Somewhere</h4>\n                <a href='http://toronto.craigslist.ca/tor/zip/5046498118.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_6.bindPopup("\n                <img src='https://images.craigslist.org/00H0H_2e6kD47dfCI_300x300.jpg' height='auto' width='160px' />\n                <h3>Really comfy Hide a bed Couch. FREE FREE FREE</h3>\n                <h4>ddo, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5046946673.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_6._popup.options.maxWidth = 300;
       map.addLayer(circle_6)
       
-      var circle_7 = L.circle([43.74432955, -79.7457394435351], 440, {
+      var circle_7 = L.circle([45.456609, -73.565998], 440, {
                             color: '#000000',
                             fillColor: '#FF0000',
                             fillOpacity: 0.2
                             });
-      circle_7.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>Free tomato plants</h3>\n                <h4>Brampton, toronto</h4>\n                <a href='http://toronto.craigslist.ca/bra/zip/5046438753.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_7.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>Free working washing machine with character</h3>\n                <h4>Verdun, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5046681641.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_7._popup.options.maxWidth = 300;
       map.addLayer(circle_7)
       
-      var circle_8 = L.circle([43.780593, -79.406649], 430, {
+      var circle_8 = L.circle([45.4737568, -73.6667808], 430, {
                             color: '#000000',
                             fillColor: '#FF0000',
                             fillOpacity: 0.2
                             });
-      circle_8.bindPopup("\n                <img src='https://images.craigslist.org/00S0S_ltFgChg16gY_300x300.jpg' height='auto' width='160px' />\n                <h3>Sharp SF-240NT1 2 Toner Cartridges For SF-2040, SF-2540 Black</h3>\n                <h4>820 Willowdale, toronto</h4>\n                <a href='http://toronto.craigslist.ca/tor/zip/5046408640.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_8.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>CUSHION for Garden Chair</h3>\n                <h4>Cote St Luc, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5046623606.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_8._popup.options.maxWidth = 300;
       map.addLayer(circle_8)
       
-      var circle_9 = L.circle([43.632690, -79.553761], 420, {
+      var circle_9 = L.circle([45.470945, -73.608485], 420, {
                             color: '#000000',
                             fillColor: '#FF0000',
                             fillOpacity: 0.2
                             });
-      circle_9.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>**2 Bags of free Plus size clothing (mostly 3 &4X) plus usedking set**</h3>\n                <h4>Toronto, toronto</h4>\n                <a href='http://toronto.craigslist.ca/tor/zip/5046407911.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_9.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>Free queen mattress, box spring and metal frame</h3>\n                <h4>Girouard and c, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5046393326.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_9._popup.options.maxWidth = 300;
       map.addLayer(circle_9)
-      
-      var circle_10 = L.circle([43.6529206, -79.3849008], 410, {
-                            color: '#000000',
-                            fillColor: '#FF0000',
-                            fillOpacity: 0.2
-                            });
-      circle_10.bindPopup("\n                <img src='https://images.craigslist.org/00z0z_5Wb0ICfs9CR_300x300.jpg' height='auto' width='160px' />\n                <h3>free: SINGER sewing machine | Art Deco</h3>\n                <h4>Downtown: little italy, toronto</h4>\n                <a href='http://toronto.craigslist.ca/tor/zip/5028782620.html' target='_blank'>View Posting in New Tab</a>\n               ");
-      circle_10._popup.options.maxWidth = 300;
-      map.addLayer(circle_10)
-      
-      var circle_11 = L.circle([43.651044, -79.388838], 400, {
-                            color: '#000000',
-                            fillColor: '#FF0000',
-                            fillOpacity: 0.2
-                            });
-      circle_11.bindPopup("\n                <img src='https://images.craigslist.org/00505_dhEjnyXfVx7_300x300.jpg' height='auto' width='160px' />\n                <h3>FREE Weider Home Gym AND Treadmill</h3>\n                <h4>Queen/University, toronto</h4>\n                <a href='http://toronto.craigslist.ca/tor/zip/5040691036.html' target='_blank'>View Posting in New Tab</a>\n               ");
-      circle_11._popup.options.maxWidth = 300;
-      map.addLayer(circle_11)
-      
-      var circle_12 = L.circle([43.646417, -79.433684], 390, {
-                            color: '#000000',
-                            fillColor: '#FF0000',
-                            fillOpacity: 0.2
-                            });
-      circle_12.bindPopup("\n                <img src='https://images.craigslist.org/00q0q_2d0CzRGdgow_300x300.jpg' height='auto' width='160px' />\n                <h3>Free Window!</h3>\n                <h4>27 Middleton Street, toronto</h4>\n                <a href='http://toronto.craigslist.ca/tor/zip/5046263664.html' target='_blank'>View Posting in New Tab</a>\n               ");
-      circle_12._popup.options.maxWidth = 300;
-      map.addLayer(circle_12)
-      
-      var circle_13 = L.circle([43.661124, -79.401511], 380, {
-                            color: '#000000',
-                            fillColor: '#FF0000',
-                            fillOpacity: 0.2
-                            });
-      circle_13.bindPopup("\n                <img src='https://images.craigslist.org/00p0p_5GrTj8xPNM7_300x300.jpg' height='auto' width='160px' />\n                <h3>Display cabinet</h3>\n                <h4>Spadina Ave, toronto</h4>\n                <a href='http://toronto.craigslist.ca/tor/zip/5046242861.html' target='_blank'>View Posting in New Tab</a>\n               ");
-      circle_13._popup.options.maxWidth = 300;
-      map.addLayer(circle_13)
-      
-      var circle_14 = L.circle([43.661124, -79.401511], 370, {
-                            color: '#000000',
-                            fillColor: '#FF0000',
-                            fillOpacity: 0.2
-                            });
-      circle_14.bindPopup("\n                <img src='https://images.craigslist.org/00q0q_kuRxcLxoE0b_300x300.jpg' height='auto' width='160px' />\n                <h3>Two clear display cases with bases</h3>\n                <h4>Spadina Ave, toronto</h4>\n                <a href='http://toronto.craigslist.ca/tor/zip/5046242684.html' target='_blank'>View Posting in New Tab</a>\n               ");
-      circle_14._popup.options.maxWidth = 300;
-      map.addLayer(circle_14)
       
 
       
