--- a/templates/raw_map.html
+++ b/templates/raw_map.html
@@ -50,7 +50,7 @@
 
 <body>
 
-   <div class="folium-map" id="folium_6ed53361c07b4d59bc27fbde8e5f1c36" style="width: 960px; height: 500px"></div>
+   <div class="folium-map" id="folium_1bdd8f328946465fa3fb06ec414d4471" style="width: 960px; height: 500px"></div>
 
    <script>
 
@@ -94,7 +94,7 @@
       /*
       Creates the map and adds the selected layers
       */
-      var map = L.map('folium_6ed53361c07b4d59bc27fbde8e5f1c36', {
+      var map = L.map('folium_1bdd8f328946465fa3fb06ec414d4471', {
                                        center:[45.5088, -73.5878],
                                        zoom: 13,
                                        maxBounds: bounds,
@@ -118,81 +118,9 @@
                             fillColor: '#FF0000',
                             fillOpacity: 0.2
                             });
-      circle_1.bindPopup("\n                <img src='https://images.craigslist.org/00101_cVq7HiixrY3_300x300.jpg' height='auto' width='160px' />\n                <h3>Pallettes (3) et terre &#65533; jardin / soil (120L)</h3>\n                <h4>Papineau &amp; Ontario, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5047008776.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_1.bindPopup("\n                <img src='https://images.craigslist.org/00101_cVq7HiixrY3_300x300.jpg' height='auto' width='160px' />\n                <h3>Pallettes (3) et pailli / wood chips (120L)</h3>\n                <h4>Papineau &amp; Ontario, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5047008776.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_1._popup.options.maxWidth = 300;
       map.addLayer(circle_1)
-      
-      var circle_2 = L.circle([45.474487, -73.638281], 490, {
-                            color: '#000000',
-                            fillColor: '#FF0000',
-                            fillOpacity: 0.2
-                            });
-      circle_2.bindPopup("\n                <img src='https://images.craigslist.org/00202_1ZkKLSvsaI,_300x300.jpg' height='auto' width='160px' />\n                <h3>Wheelchair Bag</h3>\n                <h4>NDG, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5026825484.html' target='_blank'>View Posting in New Tab</a>\n               ");
-      circle_2._popup.options.maxWidth = 300;
-      map.addLayer(circle_2)
-      
-      var circle_3 = L.circle([45.474487, -73.638281], 480, {
-                            color: '#000000',
-                            fillColor: '#000000',
-                            fillOpacity: 0.2
-                            });
-      circle_3.bindPopup("\n                <img src='https://images.craigslist.org/00M0M_aSviS8mO8NA_300x300.jpg' height='auto' width='160px' />\n                <h3>Books in Dutch about Holland</h3>\n                <h4>ndg, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5026802082.html' target='_blank'>View Posting in New Tab</a>\n               ");
-      circle_3._popup.options.maxWidth = 300;
-      map.addLayer(circle_3)
-      
-      var circle_4 = L.circle([45.486694, -73.576276], 470, {
-                            color: '#000000',
-                            fillColor: '#FF0000',
-                            fillOpacity: 0.2
-                            });
-      circle_4.bindPopup("\n                <img src='https://images.craigslist.org/00z0z_57hJGCdCK3w_300x300.jpg' height='auto' width='160px' />\n                <h3>Free aluminium garbage bin</h3>\n                <h4>montreal, Somewhere</h4>\n                <a href='http://montreal.craigslist.ca/zip/5042304641.html' target='_blank'>View Posting in New Tab</a>\n               ");
-      circle_4._popup.options.maxWidth = 300;
-      map.addLayer(circle_4)
-      
-      var circle_5 = L.circle([45.5251589, -73.5911254], 460, {
-                            color: '#000000',
-                            fillColor: '#FF0000',
-                            fillOpacity: 0.2
-                            });
-      circle_5.bindPopup("\n                <img src='https://images.craigslist.org/00303_eEqubK6dASe_300x300.jpg' height='auto' width='160px' />\n                <h3>base de lit simple en bois avec sommier</h3>\n                <h4>plateau est, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5046965240.html' target='_blank'>View Posting in New Tab</a>\n               ");
-      circle_5._popup.options.maxWidth = 300;
-      map.addLayer(circle_5)
-      
-      var circle_6 = L.circle([45.493545, -73.809166], 450, {
-                            color: '#000000',
-                            fillColor: '#FF0000',
-                            fillOpacity: 0.2
-                            });
-      circle_6.bindPopup("\n                <img src='https://images.craigslist.org/00H0H_2e6kD47dfCI_300x300.jpg' height='auto' width='160px' />\n                <h3>Really comfy Hide a bed Couch. FREE FREE FREE</h3>\n                <h4>ddo, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5046946673.html' target='_blank'>View Posting in New Tab</a>\n               ");
-      circle_6._popup.options.maxWidth = 300;
-      map.addLayer(circle_6)
-      
-      var circle_7 = L.circle([45.456609, -73.565998], 440, {
-                            color: '#000000',
-                            fillColor: '#FF0000',
-                            fillOpacity: 0.2
-                            });
-      circle_7.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>Free working washing machine with character</h3>\n                <h4>Verdun, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5046681641.html' target='_blank'>View Posting in New Tab</a>\n               ");
-      circle_7._popup.options.maxWidth = 300;
-      map.addLayer(circle_7)
-      
-      var circle_8 = L.circle([45.4737568, -73.6667808], 430, {
-                            color: '#000000',
-                            fillColor: '#FF0000',
-                            fillOpacity: 0.2
-                            });
-      circle_8.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>CUSHION for Garden Chair</h3>\n                <h4>Cote St Luc, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5046623606.html' target='_blank'>View Posting in New Tab</a>\n               ");
-      circle_8._popup.options.maxWidth = 300;
-      map.addLayer(circle_8)
-      
-      var circle_9 = L.circle([45.470945, -73.608485], 420, {
-                            color: '#000000',
-                            fillColor: '#FF0000',
-                            fillOpacity: 0.2
-                            });
-      circle_9.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>Free queen mattress, box spring and metal frame</h3>\n                <h4>Girouard and c, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5046393326.html' target='_blank'>View Posting in New Tab</a>\n               ");
-      circle_9._popup.options.maxWidth = 300;
-      map.addLayer(circle_9)
       
 
       
