--- a/templates/accueil.html
+++ b/templates/accueil.html
@@ -38,11 +38,11 @@
       <div class="row" style="margin-bottom:15%;">
         <div class="one-half column" style="margin-top:7%">
           <h4 class="hero-heading">Treasure Map</h4>
-          <a class="button button-primary" href="montreal/9">Try Montreal</a>
+          <a class="button button-primary" href="montreal">Try Montreal</a>
         <h5>What and Where</h5>
         <hr>
-        The script requires the precise name of the stuff's city, without spaces in order for the url to work. New York is then newyork. Currently only three cities are supported, Montreal, Toronto, and New York.
-        for now, try: <a href="montreal/9">Montreal</a> or <a href="newyork/9">New York</a>.
+        <p>This application is Treasure Map, a way for plotting <b>free stuff</b> posted on craigslist onto a map. </p>
+        Treasure Map requires the precise name of the stuff's city, without spaces in order for the url to work. <b>New York is then newyork</b>. Currently only five cities are supported, Montreal, Toronto, Vancouver, Washington D.C., and New York. <br> Try: <a href="washingtondc">D.C.</a> or <a href="newyork">New York</a>.
         </div>
         <div style="margin-top:15%" class="one-half column phones">
           <img class="phone" 
@@ -75,7 +75,8 @@
     <div class="container" >
     <div style="margin-right:10%;margin-left:10%;">
       <h3 class="section-heading">Contact</h3>
-      <p class="section-description"><a href="https://github.com/polypmer/treasurehunter">Here</a> is the source code.  
+      <p class="section-description">Click <a href="https://github.com/polypmer/treasure-map">here</a> for the source code.<br>
+      Current contact information is up in the <a href="http://polypmer.org">air</a>.<br>
       email fenimore.love(at)workingagenda.com</p>
       </div>
     </div>
