--- a/templates/raw_map.html
+++ b/templates/raw_map.html
@@ -50,7 +50,7 @@
 
 <body>
 
-   <div class="folium-map" id="folium_3c67049a865a4b188e5a8e79109fb78e" style="width: 960px; height: 500px"></div>
+   <div class="folium-map" id="folium_7aaa19454171474185ecaed340e30da7" style="width: 960px; height: 500px"></div>
 
    <script>
 
@@ -94,8 +94,8 @@
       /*
       Creates the map and adds the selected layers
       */
-      var map = L.map('folium_3c67049a865a4b188e5a8e79109fb78e', {
-                                       center:[49.2827, 123.1207],
+      var map = L.map('folium_7aaa19454171474185ecaed340e30da7', {
+                                       center:[45.5088, -73.5878],
                                        zoom: 11,
                                        maxBounds: bounds,
                                        layers: [base_tile]
@@ -113,84 +113,84 @@
       
 
       
-      var circle_1 = L.circle([49.337429, -123.071838], 500, {
+      var circle_1 = L.circle([45.522521, -73.598901], 500, {
                             color: '#000000',
                             fillColor: '#FF0000',
                             fillOpacity: 0.2
                             });
-      circle_1.bindPopup("\n                <img src='https://images.craigslist.org/00Z0Z_8Gzyo090UnD_300x300.jpg' height='auto' width='160px' />\n                <h3>Captains Bed + mattress</h3>\n                <h4>North Vancouver, vancouver</h4>\n                <a href='http://vancouver.craigslist.ca/nvn/zip/5040346495.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_1.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>Printer that needs tinkering</h3>\n                <h4>ile end, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5048226746.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_1._popup.options.maxWidth = 300;
       map.addLayer(circle_1)
       
-      var circle_2 = L.circle([49.2608944, -123.1139383], 490, {
+      var circle_2 = L.circle([45.536958, -73.636299], 490, {
                             color: '#000000',
                             fillColor: '#FF0000',
                             fillOpacity: 0.2
                             });
-      circle_2.bindPopup("\n                <img src='https://images.craigslist.org/00O0O_6Hi8RO8gJih_300x300.jpg' height='auto' width='160px' />\n                <h3>Free firewood-pick up only</h3>\n                <h4>vancouver, Somewhere</h4>\n                <a href='http://vancouver.craigslist.ca/rds/zip/5048078562.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_2.bindPopup("\n                <img src='https://images.craigslist.org/00k0k_kyyA0rXoFnI_300x300.jpg' height='auto' width='160px' />\n                <h3>Construction material</h3>\n                <h4>Montre, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5024289971.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_2._popup.options.maxWidth = 300;
       map.addLayer(circle_2)
       
-      var circle_3 = L.circle([49.1161848, -122.7214847], 480, {
+      var circle_3 = L.circle([45.5115944, -73.6051013], 480, {
                             color: '#000000',
                             fillColor: '#FF0000',
                             fillOpacity: 0.2
                             });
-      circle_3.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>camper</h3>\n                <h4>cloverdale, vancouver</h4>\n                <a href='http://vancouver.craigslist.ca/rds/zip/5048025072.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_3.bindPopup("\n                <img src='https://images.craigslist.org/00R0R_bKwk8MUcIik_300x300.jpg' height='auto' width='160px' />\n                <h3>Free armchair</h3>\n                <h4>Papineau + Villeray, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5033233289.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_3._popup.options.maxWidth = 300;
       map.addLayer(circle_3)
       
-      var circle_4 = L.circle([49.1161848, -122.7214847], 470, {
+      var circle_4 = L.circle([45.525982, -73.557485], 470, {
                             color: '#000000',
                             fillColor: '#FF0000',
                             fillOpacity: 0.2
                             });
-      circle_4.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>Gel pens</h3>\n                <h4>Cloverdale, vancouver</h4>\n                <a href='http://vancouver.craigslist.ca/rds/zip/5048026756.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_4.bindPopup("\n                <img src='https://images.craigslist.org/00101_cVq7HiixrY3_300x300.jpg' height='auto' width='160px' />\n                <h3>Pallettes (3) et pailli / wood chips (120L)</h3>\n                <h4>Papineau &amp; Ontario, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5047008776.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_4._popup.options.maxWidth = 300;
       map.addLayer(circle_4)
       
-      var circle_5 = L.circle([49.263655, -122.750552], 460, {
+      var circle_5 = L.circle([45.474487, -73.638281], 460, {
                             color: '#000000',
                             fillColor: '#FF0000',
                             fillOpacity: 0.2
                             });
-      circle_5.bindPopup("\n                <img src='https://images.craigslist.org/00O0O_lkpQYqriiFQ_300x300.jpg' height='auto' width='160px' />\n                <h3>***FREE BABY SEATBELT ACCESSORY -- Can you use this?</h3>\n                <h4>PORT COQUITLAM, vancouver</h4>\n                <a href='http://vancouver.craigslist.ca/pml/zip/5048010702.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_5.bindPopup("\n                <img src='https://images.craigslist.org/00202_1ZkKLSvsaI,_300x300.jpg' height='auto' width='160px' />\n                <h3>Wheelchair Bag</h3>\n                <h4>NDG, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5026825484.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_5._popup.options.maxWidth = 300;
       map.addLayer(circle_5)
       
-      var circle_6 = L.circle([49.263655, -122.750552], 450, {
+      var circle_6 = L.circle([45.474487, -73.638281], 450, {
                             color: '#000000',
-                            fillColor: '#FF0000',
+                            fillColor: '#000000',
                             fillOpacity: 0.2
                             });
-      circle_6.bindPopup("\n                <img src='https://images.craigslist.org/00808_djc38Orzzqn_300x300.jpg' height='auto' width='160px' />\n                <h3>***FREE FLOOR MATS -- Perfect for your garage or shed!</h3>\n                <h4>PORT COQUITLAM, vancouver</h4>\n                <a href='http://vancouver.craigslist.ca/pml/zip/5048010236.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_6.bindPopup("\n                <img src='https://images.craigslist.org/00M0M_aSviS8mO8NA_300x300.jpg' height='auto' width='160px' />\n                <h3>Books in Dutch about Holland</h3>\n                <h4>ndg, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5026802082.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_6._popup.options.maxWidth = 300;
       map.addLayer(circle_6)
       
-      var circle_7 = L.circle([49.2633296, -123.0965885], 440, {
+      var circle_7 = L.circle([45.486694, -73.576276], 440, {
                             color: '#000000',
                             fillColor: '#FF0000',
                             fillOpacity: 0.2
                             });
-      circle_7.bindPopup("\n                <img src='https://images.craigslist.org/00O0O_a0ILkPv1KWl_300x300.jpg' height='auto' width='160px' />\n                <h3>IKEA couch</h3>\n                <h4>Mount pleasant, vancouver</h4>\n                <a href='http://vancouver.craigslist.ca/van/zip/5047953340.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_7.bindPopup("\n                <img src='https://images.craigslist.org/00z0z_57hJGCdCK3w_300x300.jpg' height='auto' width='160px' />\n                <h3>Free aluminium garbage bin</h3>\n                <h4>montreal, Somewhere</h4>\n                <a href='http://montreal.craigslist.ca/zip/5042304641.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_7._popup.options.maxWidth = 300;
       map.addLayer(circle_7)
       
-      var circle_8 = L.circle([49.254627, -123.096513], 430, {
+      var circle_8 = L.circle([45.5251589, -73.5911254], 430, {
                             color: '#000000',
                             fillColor: '#FF0000',
                             fillOpacity: 0.2
                             });
-      circle_8.bindPopup("\n                <img src='https://images.craigslist.org/00404_7q9vbmf5Au2_300x300.jpg' height='auto' width='160px' />\n                <h3>FREE desk</h3>\n                <h4>vancouver, Somewhere</h4>\n                <a href='http://vancouver.craigslist.ca/van/zip/5047942029.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_8.bindPopup("\n                <img src='https://images.craigslist.org/00303_eEqubK6dASe_300x300.jpg' height='auto' width='160px' />\n                <h3>base de lit simple en bois avec sommier</h3>\n                <h4>plateau est, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5046965240.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_8._popup.options.maxWidth = 300;
       map.addLayer(circle_8)
       
-      var circle_9 = L.circle([49.2608944, -123.1139383], 420, {
+      var circle_9 = L.circle([45.493545, -73.809166], 420, {
                             color: '#000000',
                             fillColor: '#FF0000',
                             fillOpacity: 0.2
                             });
-      circle_9.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>full size van dodge</h3>\n                <h4>urrey, vancouver</h4>\n                <a href='http://vancouver.craigslist.ca/rds/zip/5047925896.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_9.bindPopup("\n                <img src='https://images.craigslist.org/00H0H_2e6kD47dfCI_300x300.jpg' height='auto' width='160px' />\n                <h3>Really comfy Hide a bed Couch. FREE FREE FREE</h3>\n                <h4>ddo, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5046946673.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_9._popup.options.maxWidth = 300;
       map.addLayer(circle_9)
       
