--- a/templates/raw_map.html
+++ b/templates/raw_map.html
@@ -50,7 +50,7 @@
 
 <body>
 
-   <div class="folium-map" id="folium_7aaa19454171474185ecaed340e30da7" style="width: 960px; height: 500px"></div>
+   <div class="folium-map" id="folium_f4395da5fc3e4c6698b0510613d99740" style="width: 960px; height: 500px"></div>
 
    <script>
 
@@ -94,7 +94,7 @@
       /*
       Creates the map and adds the selected layers
       */
-      var map = L.map('folium_7aaa19454171474185ecaed340e30da7', {
+      var map = L.map('folium_f4395da5fc3e4c6698b0510613d99740', {
                                        center:[45.5088, -73.5878],
                                        zoom: 11,
                                        maxBounds: bounds,
@@ -113,86 +113,131 @@
       
 
       
-      var circle_1 = L.circle([45.522521, -73.598901], 500, {
+      var circle_1 = L.circle([45.514497, -73.570075], 500, {
                             color: '#000000',
                             fillColor: '#FF0000',
                             fillOpacity: 0.2
                             });
-      circle_1.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>Printer that needs tinkering</h3>\n                <h4>ile end, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5048226746.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_1.bindPopup("\n                <img src='https://images.craigslist.org/00z0z_kl6cqunNTkh_300x300.jpg' height='auto' width='160px' />\n                <h3>FREE food and chairs</h3>\n                <h4>Lower plateau, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5049031594.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_1._popup.options.maxWidth = 300;
       map.addLayer(circle_1)
       
-      var circle_2 = L.circle([45.536958, -73.636299], 490, {
-                            color: '#000000',
-                            fillColor: '#FF0000',
-                            fillOpacity: 0.2
-                            });
-      circle_2.bindPopup("\n                <img src='https://images.craigslist.org/00k0k_kyyA0rXoFnI_300x300.jpg' height='auto' width='160px' />\n                <h3>Construction material</h3>\n                <h4>Montre, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5024289971.html' target='_blank'>View Posting in New Tab</a>\n               ");
-      circle_2._popup.options.maxWidth = 300;
-      map.addLayer(circle_2)
-      
-      var circle_3 = L.circle([45.5115944, -73.6051013], 480, {
-                            color: '#000000',
-                            fillColor: '#FF0000',
-                            fillOpacity: 0.2
-                            });
-      circle_3.bindPopup("\n                <img src='https://images.craigslist.org/00R0R_bKwk8MUcIik_300x300.jpg' height='auto' width='160px' />\n                <h3>Free armchair</h3>\n                <h4>Papineau + Villeray, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5033233289.html' target='_blank'>View Posting in New Tab</a>\n               ");
-      circle_3._popup.options.maxWidth = 300;
-      map.addLayer(circle_3)
-      
-      var circle_4 = L.circle([45.525982, -73.557485], 470, {
-                            color: '#000000',
-                            fillColor: '#FF0000',
-                            fillOpacity: 0.2
-                            });
-      circle_4.bindPopup("\n                <img src='https://images.craigslist.org/00101_cVq7HiixrY3_300x300.jpg' height='auto' width='160px' />\n                <h3>Pallettes (3) et pailli / wood chips (120L)</h3>\n                <h4>Papineau &amp; Ontario, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5047008776.html' target='_blank'>View Posting in New Tab</a>\n               ");
-      circle_4._popup.options.maxWidth = 300;
-      map.addLayer(circle_4)
-      
-      var circle_5 = L.circle([45.474487, -73.638281], 460, {
-                            color: '#000000',
-                            fillColor: '#FF0000',
-                            fillOpacity: 0.2
-                            });
-      circle_5.bindPopup("\n                <img src='https://images.craigslist.org/00202_1ZkKLSvsaI,_300x300.jpg' height='auto' width='160px' />\n                <h3>Wheelchair Bag</h3>\n                <h4>NDG, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5026825484.html' target='_blank'>View Posting in New Tab</a>\n               ");
-      circle_5._popup.options.maxWidth = 300;
-      map.addLayer(circle_5)
-      
-      var circle_6 = L.circle([45.474487, -73.638281], 450, {
+      var circle_2 = L.circle([45.502254, -73.583986], 490, {
                             color: '#000000',
                             fillColor: '#000000',
                             fillOpacity: 0.2
                             });
-      circle_6.bindPopup("\n                <img src='https://images.craigslist.org/00M0M_aSviS8mO8NA_300x300.jpg' height='auto' width='160px' />\n                <h3>Books in Dutch about Holland</h3>\n                <h4>ndg, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5026802082.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_2.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>Free cooking books and school related materials READ ON...</h3>\n                <h4>DOWNTOWN, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5049005374.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_2._popup.options.maxWidth = 300;
+      map.addLayer(circle_2)
+      
+      var circle_3 = L.circle([45.502254, -73.583986], 480, {
+                            color: '#000000',
+                            fillColor: '#FF0000',
+                            fillOpacity: 0.2
+                            });
+      circle_3.bindPopup("\n                <img src='https://images.craigslist.org/01414_jFXVfABg0hb_300x300.jpg' height='auto' width='160px' />\n                <h3>TONS OF SMALL/MEDIUM SHIPPING BOXES (POST OFFICE)</h3>\n                <h4>DOWNTOWN, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5048988204.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_3._popup.options.maxWidth = 300;
+      map.addLayer(circle_3)
+      
+      var circle_4 = L.circle([45.520368, -73.553838], 470, {
+                            color: '#000000',
+                            fillColor: '#FF0000',
+                            fillOpacity: 0.2
+                            });
+      circle_4.bindPopup("\n                <img src='https://images.craigslist.org/00l0l_6DgWjzwxLRG_300x300.jpg' height='auto' width='160px' />\n                <h3>Gift certificats comptoir lyonnais</h3>\n                <h4>montreal, Somewhere</h4>\n                <a href='http://montreal.craigslist.ca/zip/5048737396.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_4._popup.options.maxWidth = 300;
+      map.addLayer(circle_4)
+      
+      var circle_5 = L.circle([45.518895, -73.591672], 460, {
+                            color: '#000000',
+                            fillColor: '#FF0000',
+                            fillOpacity: 0.2
+                            });
+      circle_5.bindPopup("\n                <img src='https://images.craigslist.org/00K0K_5XGslWMe69k_300x300.jpg' height='auto' width='160px' />\n                <h3>Free Ikea Futon Frame</h3>\n                <h4>Mile-End, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5048684744.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_5._popup.options.maxWidth = 300;
+      map.addLayer(circle_5)
+      
+      var circle_6 = L.circle([45.551308, -73.598534], 450, {
+                            color: '#000000',
+                            fillColor: '#FF0000',
+                            fillOpacity: 0.2
+                            });
+      circle_6.bindPopup("\n                <img src='https://images.craigslist.org/00E0E_bKxoRbvojCL_300x300.jpg' height='auto' width='160px' />\n                <h3>Biblioth&#232;ques/&#233;tag&#232;res &#192; DONNER</h3>\n                <h4>Montr&#233;, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5048565919.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_6._popup.options.maxWidth = 300;
       map.addLayer(circle_6)
       
-      var circle_7 = L.circle([45.486694, -73.576276], 440, {
+      var circle_7 = L.circle([45.551308, -73.598534], 440, {
                             color: '#000000',
                             fillColor: '#FF0000',
                             fillOpacity: 0.2
                             });
-      circle_7.bindPopup("\n                <img src='https://images.craigslist.org/00z0z_57hJGCdCK3w_300x300.jpg' height='auto' width='160px' />\n                <h3>Free aluminium garbage bin</h3>\n                <h4>montreal, Somewhere</h4>\n                <a href='http://montreal.craigslist.ca/zip/5042304641.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_7.bindPopup("\n                <img src='https://images.craigslist.org/00808_aKg0f0MYMqo_300x300.jpg' height='auto' width='160px' />\n                <h3>Commode &#65533; donner (avant 1er juin 2015)</h3>\n                <h4>Montr&#233;, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5048552445.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_7._popup.options.maxWidth = 300;
       map.addLayer(circle_7)
       
-      var circle_8 = L.circle([45.5251589, -73.5911254], 430, {
+      var circle_8 = L.circle([45.551308, -73.598534], 430, {
                             color: '#000000',
                             fillColor: '#FF0000',
                             fillOpacity: 0.2
                             });
-      circle_8.bindPopup("\n                <img src='https://images.craigslist.org/00303_eEqubK6dASe_300x300.jpg' height='auto' width='160px' />\n                <h3>base de lit simple en bois avec sommier</h3>\n                <h4>plateau est, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5046965240.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_8.bindPopup("\n                <img src='https://images.craigslist.org/00O0O_3Mq6TKK3El7_300x300.jpg' height='auto' width='160px' />\n                <h3>Divan &#65533; donner (avant le 1er juin)</h3>\n                <h4>Montr&#233;, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5048536986.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_8._popup.options.maxWidth = 300;
       map.addLayer(circle_8)
       
-      var circle_9 = L.circle([45.493545, -73.809166], 420, {
+      var circle_9 = L.circle([45.575632, -73.550731], 420, {
                             color: '#000000',
                             fillColor: '#FF0000',
                             fillOpacity: 0.2
                             });
-      circle_9.bindPopup("\n                <img src='https://images.craigslist.org/00H0H_2e6kD47dfCI_300x300.jpg' height='auto' width='160px' />\n                <h3>Really comfy Hide a bed Couch. FREE FREE FREE</h3>\n                <h4>ddo, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5046946673.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_9.bindPopup("\n                <img src='https://images.craigslist.org/00m0m_aQS8kYSIElv_300x300.jpg' height='auto' width='160px' />\n                <h3>900 L oil tank</h3>\n                <h4>montreal, Somewhere</h4>\n                <a href='http://montreal.craigslist.ca/zip/5048506256.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_9._popup.options.maxWidth = 300;
       map.addLayer(circle_9)
+      
+      var circle_10 = L.circle([45.522521, -73.598901], 410, {
+                            color: '#000000',
+                            fillColor: '#FF0000',
+                            fillOpacity: 0.2
+                            });
+      circle_10.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>Printer that needs tinkering</h3>\n                <h4>ile end, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5048226746.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_10._popup.options.maxWidth = 300;
+      map.addLayer(circle_10)
+      
+      var circle_11 = L.circle([45.536958, -73.636299], 400, {
+                            color: '#000000',
+                            fillColor: '#FF0000',
+                            fillOpacity: 0.2
+                            });
+      circle_11.bindPopup("\n                <img src='https://images.craigslist.org/00k0k_kyyA0rXoFnI_300x300.jpg' height='auto' width='160px' />\n                <h3>Construction material</h3>\n                <h4>Montre, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5024289971.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_11._popup.options.maxWidth = 300;
+      map.addLayer(circle_11)
+      
+      var circle_12 = L.circle([45.5115944, -73.6051013], 390, {
+                            color: '#000000',
+                            fillColor: '#FF0000',
+                            fillOpacity: 0.2
+                            });
+      circle_12.bindPopup("\n                <img src='https://images.craigslist.org/00R0R_bKwk8MUcIik_300x300.jpg' height='auto' width='160px' />\n                <h3>Free armchair</h3>\n                <h4>Papineau + Villeray, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5033233289.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_12._popup.options.maxWidth = 300;
+      map.addLayer(circle_12)
+      
+      var circle_13 = L.circle([45.525982, -73.557485], 380, {
+                            color: '#000000',
+                            fillColor: '#FF0000',
+                            fillOpacity: 0.2
+                            });
+      circle_13.bindPopup("\n                <img src='https://images.craigslist.org/00101_cVq7HiixrY3_300x300.jpg' height='auto' width='160px' />\n                <h3>Pallettes (3) et pailli / wood chips (120L)</h3>\n                <h4>Papineau &amp; Ontario, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5047008776.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_13._popup.options.maxWidth = 300;
+      map.addLayer(circle_13)
+      
+      var circle_14 = L.circle([45.474487, -73.638281], 370, {
+                            color: '#000000',
+                            fillColor: '#FF0000',
+                            fillOpacity: 0.2
+                            });
+      circle_14.bindPopup("\n                <img src='https://images.craigslist.org/00202_1ZkKLSvsaI_300x300.jpg' height='auto' width='160px' />\n                <h3>Wheelchair Bag</h3>\n                <h4>NDG, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5026825484.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_14._popup.options.maxWidth = 300;
+      map.addLayer(circle_14)
       
 
       
