--- a/skeleton-themed-version/templates/raw_map.html
+++ b/skeleton-themed-version/templates/raw_map.html
@@ -50,7 +50,7 @@
 
 <body>
 
-   <div class="folium-map" id="folium_141589dc9711444685841a69be1a42f4" style="width: 960px; height: 500px"></div>
+   <div class="folium-map" id="folium_53d82217517f4f1d9e12f8e6eaa6e694" style="width: 960px; height: 500px"></div>
 
    <script>
 
@@ -94,8 +94,8 @@
       /*
       Creates the map and adds the selected layers
       */
-      var map = L.map('folium_141589dc9711444685841a69be1a42f4', {
-                                       center:[49.2827, -123.1207],
+      var map = L.map('folium_53d82217517f4f1d9e12f8e6eaa6e694', {
+                                       center:[45.5088, -73.5878],
                                        zoom: 11,
                                        maxBounds: bounds,
                                        layers: [base_tile]
@@ -113,84 +113,84 @@
       
 
       
-      var circle_1 = L.circle([49.222597, -122.931890], 500, {
+      var circle_1 = L.circle([45.524031, -73.582712], 500, {
                             color: '#000000',
                             fillColor: '#FF0000',
                             fillOpacity: 0.2
                             });
-      circle_1.bindPopup("\n                <img src='https://images.craigslist.org/00x0x_1ilGfayB48e_300x300.jpg' height='auto' width='160px' />\n                <h3>Free TV/ stand/ VCR /headboard</h3>\n                <h4>vancouver, Somewhere</h4>\n                <a href='http://vancouver.craigslist.ca/bnc/zip/5054811340.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_1.bindPopup("\n                <img src='https://images.craigslist.org/00c0c_59rWw1Bbdxt_300x300.jpg' height='auto' width='160px' />\n                <h3>Free industrial cleaners</h3>\n                <h4>Plateau, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5051410490.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_1._popup.options.maxWidth = 300;
       map.addLayer(circle_1)
       
-      var circle_2 = L.circle([49.126119, -122.690865], 490, {
+      var circle_2 = L.circle([45.5115944, -73.6051013], 490, {
                             color: '#000000',
                             fillColor: '#FF0000',
                             fillOpacity: 0.2
                             });
-      circle_2.bindPopup("\n                <img src='https://images.craigslist.org/00z0z_1hwCzxHGHHf_300x300.jpg' height='auto' width='160px' />\n                <h3>Free Queensize Bed (Matress/Boxspring/Frame)</h3>\n                <h4>Surrey / Langley, vancouver</h4>\n                <a href='http://vancouver.craigslist.ca/rds/zip/5054808508.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_2.bindPopup("\n                <img src='https://images.craigslist.org/00U0U_9s9rAU39Dsu_300x300.jpg' height='auto' width='160px' />\n                <h3>Christmas Village</h3>\n                <h4>Atwater Metro, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5051388778.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_2._popup.options.maxWidth = 300;
       map.addLayer(circle_2)
       
-      var circle_3 = L.circle([49.2608944, -123.1139383], 480, {
+      var circle_3 = L.circle([45.512270, -73.707503], 480, {
                             color: '#000000',
                             fillColor: '#FF0000',
                             fillOpacity: 0.2
                             });
-      circle_3.bindPopup("\n                <img src='https://images.craigslist.org/00K0K_4aUtganWF6k_300x300.jpg' height='auto' width='160px' />\n                <h3>Spare closet/ wardrobe</h3>\n                <h4>vancouver, Somewhere</h4>\n                <a href='http://vancouver.craigslist.ca/nvn/zip/5054807963.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_3.bindPopup("\n                <img src='https://images.craigslist.org/00Y0Y_aygus3S8fir_300x300.jpg' height='auto' width='160px' />\n                <h3>Persian cat looking for a caring home</h3>\n                <h4>Ville Saint-Laurent, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5051335587.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_3._popup.options.maxWidth = 300;
       map.addLayer(circle_3)
       
-      var circle_4 = L.circle([49.281067, -123.107431], 470, {
+      var circle_4 = L.circle([45.482277, -73.585191], 470, {
                             color: '#000000',
                             fillColor: '#FF0000',
                             fillOpacity: 0.2
                             });
-      circle_4.bindPopup("\n                <img src='https://images.craigslist.org/00F0F_6Q5rFu6vjkE_300x300.jpg' height='auto' width='160px' />\n                <h3>Free Wooden Pallets</h3>\n                <h4>vancouver, Somewhere</h4>\n                <a href='http://vancouver.craigslist.ca/van/zip/5054805920.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_4.bindPopup("\n                <img src='https://images.craigslist.org/00606_kO5WyJoow7f_300x300.jpg' height='auto' width='160px' />\n                <h3>Petmate carrier (cat or small dog)</h3>\n                <h4>Montre, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5051295416.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_4._popup.options.maxWidth = 300;
       map.addLayer(circle_4)
       
-      var circle_5 = L.circle([49.279190, -123.119839], 460, {
+      var circle_5 = L.circle([45.482277, -73.585191], 460, {
                             color: '#000000',
                             fillColor: '#FF0000',
                             fillOpacity: 0.2
                             });
-      circle_5.bindPopup("\n                <img src='https://images.craigslist.org/00202_eMcgSD6udQG_300x300.jpg' height='auto' width='160px' />\n                <h3>Mobler futon couch sofa bed</h3>\n                <h4>vancouver, Somewhere</h4>\n                <a href='http://vancouver.craigslist.ca/van/zip/5054804527.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_5.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>FREE queen mattress</h3>\n                <h4>Montre, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5051285446.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_5._popup.options.maxWidth = 300;
       map.addLayer(circle_5)
       
-      var circle_6 = L.circle([49.204813, -123.069620], 450, {
+      var circle_6 = L.circle([45.482277, -73.585191], 450, {
                             color: '#000000',
                             fillColor: '#FF0000',
                             fillOpacity: 0.2
                             });
-      circle_6.bindPopup("\n                <img src='https://images.craigslist.org/00r0r_9HRz2BUqsxG_300x300.jpg' height='auto' width='160px' />\n                <h3>12 Volt Cabin Lights</h3>\n                <h4>Richmond, vancouver</h4>\n                <a href='http://vancouver.craigslist.ca/rch/zip/5047555676.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_6.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>FREE plywood</h3>\n                <h4>Montre, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5051267469.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_6._popup.options.maxWidth = 300;
       map.addLayer(circle_6)
       
-      var circle_7 = L.circle([49.2608944, -123.1139383], 440, {
+      var circle_7 = L.circle([45.538501, -73.596411], 440, {
                             color: '#000000',
                             fillColor: '#FF0000',
                             fillOpacity: 0.2
                             });
-      circle_7.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>Free Wood Chips - North District</h3>\n                <h4>vancouver, Somewhere</h4>\n                <a href='http://vancouver.craigslist.ca/bnc/zip/5043742190.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_7.bindPopup("\n                <img src='http://upload.wikimedia.org/wikipedia/commons/a/ac/No_image_available.svg' height='auto' width='160px' />\n                <h3>blank CD and kitchen supplies</h3>\n                <h4>Rosemont, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5051175889.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_7._popup.options.maxWidth = 300;
       map.addLayer(circle_7)
       
-      var circle_8 = L.circle([49.228022, -122.642863], 430, {
+      var circle_8 = L.circle([45.450809, -73.638739], 430, {
                             color: '#000000',
                             fillColor: '#FF0000',
                             fillOpacity: 0.2
                             });
-      circle_8.bindPopup("\n                <img src='https://images.craigslist.org/00l0l_9yJ3ncg4WLh_300x300.jpg' height='auto' width='160px' />\n                <h3>Whirlpool Clothes Washer & Dryer (Heavy Duty)</h3>\n                <h4>Maple Ridge, vancouver</h4>\n                <a href='http://vancouver.craigslist.ca/pml/zip/5049906415.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_8.bindPopup("\n                <img src='https://images.craigslist.org/00t0t_4am5LwCAvoa_300x300.jpg' height='auto' width='160px' />\n                <h3>STACKABLE STONES</h3>\n                <h4>Montreal West, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5051173117.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_8._popup.options.maxWidth = 300;
       map.addLayer(circle_8)
       
-      var circle_9 = L.circle([49.2608944, -123.1139383], 420, {
+      var circle_9 = L.circle([45.450809, -73.638739], 420, {
                             color: '#000000',
                             fillColor: '#FF0000',
                             fillOpacity: 0.2
                             });
-      circle_9.bindPopup("\n                <img src='https://images.craigslist.org/00K0K_9XGvGjTsoT4_300x300.jpg' height='auto' width='160px' />\n                <h3>FREE 8ft sliding glass door in excellent condition</h3>\n                <h4>vancouver, Somewhere</h4>\n                <a href='http://vancouver.craigslist.ca/nvn/zip/5054743977.html' target='_blank'>View Posting in New Tab</a>\n               ");
+      circle_9.bindPopup("\n                <img src='https://images.craigslist.org/00v0v_bPi8n6JjbQX_300x300.jpg' height='auto' width='160px' />\n                <h3>Maple, Oak, and Chestnut trees</h3>\n                <h4>Montreal West (Loyola Campu, montreal</h4>\n                <a href='http://montreal.craigslist.ca/zip/5051120651.html' target='_blank'>View Posting in New Tab</a>\n               ");
       circle_9._popup.options.maxWidth = 300;
       map.addLayer(circle_9)
       
