--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-6 col-md-offset-1">
+  <div class="col-md-6">
       <h3 class="section-heading">Contact</h3>
       <p class="section-description">Click <a href="https://github.com/polypmer/treasure-map">here</a> for the source code.<br>
       Current contact information is in <a href="http://polypmer.org">transition</a>. Or email the author here:<br> 
@@ -39,7 +39,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-6 col-md-offset-1">
+  <div class="col-md-6">
       <h3 class="section-heading">Application Interface</h3>
       <p>The default map and location page loads 10 items. The geolocator crashes around 20 items, give or take.
       <ul>
@@ -52,7 +52,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-6 col-md-offset-1">
+  <div class="col-md-6">
       <h3>Disclaimer</h3>
       <p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
