--- a/templates/view.html
+++ b/templates/view.html
@@ -5,7 +5,7 @@
 <div class="col-md-9 col-md-offset-1">
 
 <h1>Recent items in {{ location.title() }}</h1>
-<button class="btn btn-success" href=/{{location}}/map><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Load Map</button>
+<a class="btn btn-success" href="/{{location}}/map" ><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Load Map</a>
 </div>
 </div>
 
