--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="row">
   <div class="col-md-5">    
-    <h4>Treasure Map</h4>
+    <h1>The Treasure Map</h1>
     <h5>What and Where</h5>
     <div class="dropdown">
   <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
@@ -11,30 +11,33 @@
     <span class="caret"></span>
   </button>
   <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-    <li role="presentation" class="dropdown-header">Well Formed</li>
+    <li role="presentation" class="dropdown-header">More or Less Working</li>
     <li role="presentation"><a role="menuitem" tabindex="-1" href="/montreal">Montréal</a></li>
     <li role="presentation"><a role="menuitem" tabindex="-1" href="/newyork">New York</a></li>
     <li role="presentation"><a role="menuitem" tabindex="-1" href="/washingtondc">D.C.</a></li>
     <li role="presentation" class="dropdown-header">Under Construction</li>
     <li role="presentation"><a role="menuitem" tabindex="-1" href="toronto">Toronto</a></li>
         <li role="presentation"><a role="menuitem" tabindex="-1" href="vancouver">Vancouver</a></li>
+    <li role="presentation" class="dropdown-header">Planned</li>
+    <li role="presentation"><a role="menuitem" tabindex="-1" href="philadelphia">Philadelphia</a></li>
   </ul>
 </div>
     
     <hr>
-    <p>This application is Treasure Map, a way for plotting <b>free stuff</b> posted on craigslist onto a map. </p>
-    <p>Treasure Map requires the precise name of the stuff's city, without spaces in order for the url to work. <b>New York is then newyork</b>. Currently only five cities are supported: Montreal, Toronto, Vancouver, Washington D.C., and New York. <br> Try: <a href="/washingtondc">D.C.</a> or <a href="/newyork">New York</a>.</p>
+    <p>This application is Treasure Map, a way for plotting <b>free stuff</b> posted on craigslist onto a map. <b>Zero to no cost!</b></p>
+    <p>The Treasure Map requires the precise name of the stuff's city, without spaces, in order for the url to work. <b>New York is then newyork</b>.<br> Currently only five cities are supported: Montreal, Toronto, Vancouver, Washington D.C., and New York. <br> Try: <a href="/washingtondc">D.C.</a> or <a href="/newyork">New York</a>.</p>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-4">
             <img 
           src="../static/img/compass.png" style="width:300px;height:auto">
   </div>
 </div>
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-6" style="margin-top:10%">
+  <hr>
       <h3 class="section-heading">Contact</h3>
-      <p class="section-description">Click <a href="https://github.com/polypmer/treasure-map">here</a> for the source code.<br>
-      Current contact information is in <a href="http://polypmer.org">transition</a>. Or email the author here:<br> 
+      <p class="section-description">Click <a href="https://github.com/polypmer/treasure-map">here</a> for the website source code or <a href="https://github.com/polypmer/freestuff-bot">here</a> for the freestuff-bot standalone.<br>
+      Email the author here:<br> 
       email fenimore.love(at)workingagenda.com</p>  
   </div>
 </div>
