--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% block title %} - Page Not Found{% endblock %}
 {% block content %}
-  <h1>Page Not Found</h1>
-  <p><a href="{{ url_for('index') }}">home</a></p>
+  <h1>Something went wrong! (404)</h1>
+  <p><a href="{{ url_for('index') }}">home</a>
+    <br>
+    Make sure you didn't write a '/' at the end of the url.<br>
+    Some locations aren't tested and/or aren't working.
+  </p>
 {% endblock %}
