--- a/templates/view.html
+++ b/templates/view.html
@@ -2,16 +2,19 @@
 {% block title %} - Home{% endblock %}
 {% block content %}
 <div class="row">
-<div class="col-md-9 col-md-offset-1">
-
-<h1>Recent items in {{ location.title() }}</h1>
-<a class="btn btn-success" href="/{{location}}/map" ><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Load Map</a>
+  <div class="col-md-9 col-md-offset-1">
+    <h1>Recent items in {{ location.title() }}</h1>
+  </div>
 </div>
+<div class="row">
+  <div class="col-md-9 col-md-offset-1 text-center"><br>
+    <button class="btn btn-success btn-lg center-block" href={{location}}/map><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Load Map</button>
+    <hr>
+  </div>
 </div>
-
 
 <div class="row">
-<hr>
+
   <div class="col-md-3 col-md-offset-1">          
           {% for thing in things[:3] %}
           <div class="panel panel-info">
@@ -21,7 +24,7 @@
             </div>
             <div class="panel-body">
               <span title={{ thing.title }}>
-              <img class="image-cropper"
+              <img class="img-thumbnail img-responsive center-block" style="max-height:100%"
                   src= {{ thing.image }} />
               </span>
             </div>
@@ -37,7 +40,7 @@
             </div>
             <div class="panel-body">
               <span title={{ thing.title }}>
-              <img class="image-cropper"
+              <img class="img-thumbnail img-responsive center-block" style="max-height:100%"
                   src= {{ thing.image }} />
               </span>
             </div>
@@ -53,7 +56,7 @@
             </div>
             <div class="panel-body">
               <span title={{ thing.title }}>
-              <img class="image-cropper"
+              <img class="img-thumbnail img-responsive center-block" style="max-height:100%"
                   src= {{ thing.image }} />
               </span>
             </div>
