it wsgi wtf works!

--- a/templates/map.html
+++ b/templates/map.html
@@ -20,8 +20,8 @@
           If empty, try <b>zooming out.</b><br>
           treasure.plyp.org/"location"/map | Default 10 items.<br>
           treasure.plyp.org/"location"/map/x | The geocoder crashes around 15/20 items.<br><br>
-          <button class="btn btn-primary btn-xs" href="{{location}}/map/15">
-          Load 15 Items</button>
+          <a class="btn btn-primary btn-xs" href="map/15" >
+          Load 15 Items</a>
         </div>
       </div>
     </div>
